cmake_minimum_required(VERSION 3.6)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 99)
project(SussyBard LANGUAGES CXX C)

if (CMAKE_COMPILER_IS_GNUCXX OR (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang"))
    set(SUSSYBARD_CXX_FLAGS -Wshadow -Wall -Wextra -Wno-comment -Wno-missing-field-initializers -Wno-empty-body -ffast-math)
    if (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
        set(SUSSYBARD_CXX_FLAGS ${SUSSYBARD_CXX_FLAGS} -Wno-backslash-newline-escape)
    endif()
    if (NOT (${CMAKE_BUILD_TYPE} MATCHES "Release"))
        message("Disabling frame pointer for profiling/debug.")
        set(SUSSYBARD_CXX_FLAGS ${SUSSYBARD_CXX_FLAGS} -fno-omit-frame-pointer)
    endif()
    if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
        message("Enabling SSE3 support.")
        set(SUSSYBARD_CXX_FLAGS ${SUSSYBARD_CXX_FLAGS} -msse3)
    endif()
elseif (MSVC)
    set(SUSSYBARD_CXX_FLAGS /D_CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4309 /wd4005 /MP /DNOMINMAX)
endif()

include(GNUInstallDirs)

find_package(ALSA REQUIRED)
include(FindPkgConfig)
pkg_check_modules(XCB REQUIRED IMPORTED_TARGET xcb xcb-xtest xcb-keysyms)

add_executable(sussybard sussybard.cpp)
target_link_libraries(sussybard PRIVATE ${ALSA_LIBRARIES})
target_link_libraries(sussybard PRIVATE PkgConfig::XCB)
target_include_directories(sussybard PRIVATE ${ALSA_INCLUDE_DIRS})
target_compile_options(sussybard PRIVATE ${SUSSYBARD_CXX_FLAGS})

